on a flexible and high quality code base designed for small 
to medium-large businesses.
 
It features a simple interface, fully adaptable administration
and user experience, internationalization, platform and database 
abstraction, and endless possibilities for project expansion. 
--------------------

----- VERSION 2.5.6 (development) -----

----- VERSION 2.5.5 (testing) -----

2005-04-12, kato
  Added support for 'mysqli' driver and some bug fixes in db insert calls
    - zentrack_2/includes/db.class 1.37
    - zentrack_2/includes/zen.class 1.34
  Cleaned up security restrictions
    - zentrack_2/includes/session_start.php 1.24
  Fixed arrow images in admin field map form, which were broken when rootUrl
  is not /.
    - zentrack_2/includes/templates/fieldMapForm.php 1.9
  Added some useful security into the debug information (protect passwords,
  emails, and urls).
    - zentrack_2/includes/footer.php 1.32
  Fixed project submit bug (type_id required, system_id required, etc..)
    - zentrack_2/www/addProjectSubmit.php
  Cleaned up behavior code for dealing with default values in hidden and text
  fields
    - zentrack_2/www/behavior_js.php 1.27
    
2005-03-17, kato
  Added ability to change label text when a behavior is run, so that the label
  field type can work with behaviors properly.
    - zentrack_2/includes/templates/fields/label.template
    - zentrack_2/www/behavior_js.php

2005-04-06, cfalonso
  Fixed problem in fieldmap admin page for ticket_close map
    - zentrack_2/includes/templates/fieldMapForm.php 1.8
  Fixed error raised in JS Console when accessing the ticket's close page
    - zentrack_2/includes/ZenFieldMap.class 1.14
  To be used for hidden, text, etc: set the oldPos value if the fieldObj.value is in the list
  (unless we do it, the first element of the list will always be assigned to the field, no matter if the fieldObj.value is in the list)
    - zentrack_2/www/behavior_js.php 1.25
    - zentrack_2/www/behavior_js.php 1.24
