@@ -415,7 +415,7 @@ CREATE TABLE ZENTRACK_GROUP (
   eval_type VARCHAR(10) default NULL,
   eval_text TEXT default NULL,
   name_of_file VARCHAR(100),
-  include_none int2,
+  include_none int2
 );
 
 CREATE TABLE ZENTRACK_GROUP_DETAIL (
